# bcemu

./: .gitignore  .gitversion  CMakeLists.txt  LICENSE  Makefile.unix  bc_emu.c  bc_emu.doxygen  bc_emu.h.cmake  bc_emu_modules.c.cmake  debug.h  gendocs.sh  interface.h  module.c  module.h  xmalloc.c  xmalloc.h  xtypes.h
arch/pc/: pc.c  pc.h  pc_cli.c  pc_cli.h  xgetopt.c  xgetopt.h
docs/: CONTRIB  DIR.txt  LICENSE-MIT.txt  LICENSE.freegetopt  README
docs/slides/: Makefile  bt_balazond_slides.tex
docs/slides/fig/: _placeholder.eps  anal_interpret.eps  anal_kompo.eps  bc_emu_ss1.eps  bc_emu_ss2.eps  bc_emu_ss3.eps  bc_emu_ss4.eps  pair.eps  pce_board.eps  pce_planar.eps  pce_ss1.eps  pce_ss2.eps  pce_ss3.eps  pce_ss4.eps
docs/thesis/: Makefile  abstract.txt  bt_balazond.bib  bt_balazond.tex  macros_balazond.sty  macros_k336.sty  requirements.txt
docs/thesis/ch/: 01_introduction.tex  02_specification.tex  03_existing.tex  04_analysis.tex  05_implementation.tex  06_testing.tex  07_conclusion.tex  NN_typographic_conventions.tex
docs/thesis/fig/: anal_emu.eps  anal_model.eps  anal_ui.eps  impl_sdl.eps  impl_sdlgl.eps  pce_addr.eps  pce_arch.eps  pce_banks.eps  pce_pcepro32.eps  pce_photo.eps  pce_pixel.eps
emu/pce/: cpu_huc6280.c  cpu_huc6280.h  cpu_instr.inc  cpu_instr_util.inc  cpu_op.h  cpu_op_helper.h  cpu_op_tab.inc  cpu_op_util.h  pce.c  pce.h  pce_main.c  pce_main.h  psg.c  psg.h  rom.c  rom.h  rom_parser.c  rom_parser.h  vce_huc6260.c  vce_huc6260.h  vdc_huc6270.c  vdc_huc6270.h
ui/sdl/: sdl.c  sdl.h  sdl_main.c  sdl_main.h
ui/sdlgl/: sdlgl.h  sdlgl_main.c  sdlgl_main.h
